--- a/etc/fortnitepwa/manifest.json
+++ b/etc/fortnitepwa/manifest.json
@@ -2,7 +2,7 @@
   "name": "Fortnite",
   "short_name": "Fortnite",
   "start_url": "https://play.geforcenow.com/games?game-id=46bfab06-d864-465d-9e56-2d9e45cdee0a&lang=en_GB&asset-id=01_1d330568-227d-4856-b235-a54c4418ae5a",
-  "display": "fullscreen",
+  "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
